<resources>
    <string name="app_name">Physio_plus_App</string>
    <string name="logo_image_description">logo_image</string>
    <string name="r1EnterButtonPSF">Π.Σ.Φ.</string>
    <string name="r1EnterButtonPhysio">Φυσιοθεραπευτηριο</string>
    <string name="r1EnterButtonPat">Ασθενης</string>
    <string name="passReminder">Ξεχάσατε τον κωδικό σας;</string>
    <string name="connect">Συνδεθείτε</string>
    <string name="r1_prompt_login">Συνδεθείτε ως</string>
    <string name="r1_title">Προσθήκη Φυσιοθεραπευτηρίου</string>
    <string name="r1_subtitle">Στοιχεία Λογαριασμού</string>
    <string name="username">Όνομα Χρήστη</string>
    <string name="user_pass">Συνθηματικό</string>
    <string name="verification_pass">Επιβεβαίωση Συθνθηματικού</string>
    <string name="verification_button">Επιβεβαιωση</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="r2_code">Κωδικός</string>
    <string name="r2_codehint">Εισαγωγή κωδικού</string>
    <string name="r2_name">Όνομα</string>
    <string name="r2_description">Περιγραφή</string>
    <string name="r2_price">Τιμή</string>
    <string name="r2_namehint">Εισαγωγή ονόματος</string>
    <string name="r2_deschint">Εισαγωγή περιγραφής</string>
    <string name="r2_pricehint">- €</string>
    <string name="r2_confirmation">Επιβεβαίωση</string>
    <string name="r2_backgroud_image">backgroud_image</string>
    <string name="r3_create_label">Δημιουργία</string>
    <string name="r3_patient_label">Ασθενή</string>
    <string name="r3_name_label">Ονοματεπώνυμο</string>
    <string name="r3_amka_label">ΑΜΚΑ</string>
    <string name="r3_address_label">Διεύθυνση</string>
    <string name="hello_blank_fragment_r6">Hello blank fragment</string>
    <string name="upcoming_eventΑ_r6">Προσεχή</string>
    <string name="upcoming_eventΒ_r6">Ραντεβού</string>
    <string name="profile">Profile</string>
    <string name="physiologo">physiologo</string>
    <string name="physiotext">PhysioText</string>
    <string name="goback" />
    <string name="physio">Physio</string>
    <string name="logo">logo</string>
    <string name="placeholder">Placeholder</string>
    <string name="orologioProgramma">Ωρολόγιο Πρόγραμμα</string>
    <string name="_9_00">9:00</string>
    <string name="_10_00">10:00</string>
    <string name="_11_00">11:00</string>
    <string name="_12_00">12:00</string>
    <string name="_13_00">13:00</string>
    <string name="_14_00">14:00</string>
    <string name="_15_00">15:00</string>
    <string name="_16_00">16:00</string>
    <string name="_17_00">17:00</string>
    <string name="_18_00">18:00</string>
    <string name="_19_00">19:00</string>
    <string name="_20_00">20:00</string>
    <string name="_21_00">21:00</string>
    <string name="_22_00">22:00</string>
    <string name="backbutton">backButton</string>
    <string name="calendarButton" />
    <string name="euroButton" />
    <string name="plusSign" />
    <string name="april_3_monday">April 3, Monday</string>
    <string name="_10_00_pm">10:00 pm</string>
    <string name="milios_filios">Milios Filios</string>
    <string name="todo">TODO</string>
    <string name="aitimata">Αιτήματα</string>
    <string name="radevou"> Ραντεβου</string>
    <string name="screen_title_first">Προσθήκη</string>
    <string name="screen_title_second">Ραντεβού</string>
    <string name="info_title">Στοιχεία Ασθενή</string>
    <string name="full_name">Ονοματεπώνυμο</string>
    <string name="personal_number">ΑΜΚΑ</string>
    <string name="menu_title">Καταγραφή Ενεργειών</string>
    <string name="service_title">Παροχές</string>
    <string name="notes_hint">Σημειώσεις</string>
    <string name="button_text">Καταχωρηση</string>
    <string name="cost_hint">Κόστος</string>
    <string name="date_hint">HH/MM/EE</string>
    <string name="calendar_button">calendar_button</string>
    <string name="date_value">%1$d/%2$d/%3$d</string>
    <string name="spinner_prompt">Επιλέξτε Παροχή</string>
    <string name="requestLabel">Αίτημα</string>
    <string name="request_2_Label">Ραντεβού</string>
    <string name="dayLabel">Επιλογή Ημέρας</string>
    <string name="nextButton">Επόμενο</string>
    <string name="daysLabel">Ημέρα</string>
    <string name="hourLabel">Ωρολόγιο Πρόγραμμα</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="basic_image">BasicImage</string>
    <string-array name="hour_array">
        <item>9:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
    </string-array>
    <string name="page_title">Ιστορικό Συναλλαγών</string>
    <string name="search">Search</string>
    <string name="patient_id">Patient ID</string>
    <string name="results">Results</string>
    <string name="financial_history_screen_title">Ιστορικό Συναλλαγών</string>
    <string name="imageofhospital">imageOfHospital</string>
    <string name="filtersimage">filtersImage</string>
    <string name="addkneading">addKneading</string>
    <string name="footer_button">footer_button</string>
    <string name="footerEuro_button">footer_button</string>
    <string name="add_new_psf">add new Psf</string>
    <string name="physio_center_button">physio center Buttodn</string>
    <string name="add_kneading_button">add kneading bustton</string>
    <string name="patient_s_name">Patient\'s Name</string>
    <string name="person_button">person button</string>
    <string name="button">Button</string>
    <string name="day_name">day name</string>
    <string name="notiftopbar">notiftopbar</string>
    <string name="redbubble">redbubble</string>
    <string name="name">Όνομα</string>
    <string name="add_patient">add patient</string>
    <string name="image_of_doctors">image of doctors</string>
    <string name="surname">Επίθετο</string>
    <string name="cancel_patient_add">cancel patient add</string>
</resources>