<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/goback"
        android:contentDescription="@string/goback"
        android:icon="@drawable/r7_goback"
        android:title=""
        app:showAsAction="ifRoom"></item>


    <item
        android:id="@+id/physiologo"
        android:contentDescription="@string/physiologo"
        android:icon="@drawable/r7_physiologo"
        android:iconTint="@color/PrimaryGreen"
        android:title=""
        app:showAsAction="ifRoom"></item>


    <item
        android:id="@+id/text"
        android:contentDescription="@string/physiotext"
        android:icon="@drawable/r7_physiotext"
        android:iconTint="@color/PrimaryGreen"
        android:title=""
        app:showAsAction="ifRoom"
        ></item>


    <item
        android:id="@+id/profile"
        android:contentDescription="@string/profile"
        android:icon="@drawable/r7_baseline_person_24"
        android:title=""
        app:showAsAction="ifRoom"></item>


</menu>