<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/r7_roundedshape"
    android:elevation="8dp"
    android:padding="16dp">

    <!-- Date -->
    <TextView
        android:id="@+id/textDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/april_3_monday"
        android:textSize="18sp"
        android:textColor="@color/text_color" />

    <!-- Time -->
    <TextView
        android:id="@+id/textTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_10_00_pm"
        android:textColor="#616161"
        android:textSize="16sp" />

    <!-- Patient Name -->
    <TextView
        android:id="@+id/textPatientName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/milios_filios"
        android:textSize="20sp"
        android:textColor="@color/text_color"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center" />

</LinearLayout>
