<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/entry"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

    <LinearLayout
        android:id="@+id/code_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <include
            layout="@layout/psf_topbarmenu"
            android:layout_gravity="center|top">

        </include>

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"

            android:layout_width="match_parent"
            android:layout_height="192dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"

                app:toolbarId="@+id/toolbar">

                <ImageView
                    android:id="@+id/app_bar_image"
                    android:layout_width="match_parent"
                    android:layout_height="449dp"
                    android:contentDescription="@string/r2_backgroud_image"

                    android:scaleType="centerCrop"
                    android:src="@drawable/r2_physio"
                    app:layout_collapseMode="parallax" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/r2_entry_boarder"
            android:orientation="vertical">

            <TextView
                android:id="@+id/code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/r2_code"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/codein"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/r2_textview_boarder"
                android:ems="10"
                android:hint="@string/r2_codehint"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColorHint="@color/sec_textColor" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/r2_name"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/namein"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/r2_textview_boarder"
                android:ems="10"
                android:hint="@string/r2_namehint"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColorHint="@color/sec_textColor" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/r2_description"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/descin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/r2_textview_boarder"
                android:ems="10"
                android:hint="@string/r2_deschint"
                android:inputType="text"
                android:minHeight="120dp"
                android:padding="10dp"
                android:textAlignment="textStart"
                android:textColorHint="@color/sec_textColor" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/r2_price"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/pricein"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/r2_textview_boarder"
                android:ems="10"
                android:hint="@string/r2_pricehint"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColorHint="@color/sec_textColor" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="80dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/r2_round_button">


                <Button
                    android:id="@+id/confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/black"
                    android:onClick="onClick"
                    android:text="@string/r2_confirmation"
                    android:textAllCaps="false" />
            </FrameLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>

