<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:backgroundTint="#FFFFFF">

        <ImageView
            android:id="@+id/goback"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_gravity="start|top"
            android:contentDescription="@string/goback"
            android:src="@drawable/goback_r7"
            android:text="@string/backbutton"
            android:title=""
            android:showAsAction="ifRoom" />

        <!-- Dynamic highlighted Text for appointments -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/aitimata"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aitimata"
                android:textSize="18sp"
                android:gravity="end"
                android:textColor="@android:color/darker_gray"
                android:layout_marginBottom="30dp" />
            <TextView
                android:id="@+id/radevou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radevou"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textColor="@color/PrimaryGreen"
                android:layout_marginBottom="30dp" />
        </LinearLayout>

        <!-- Container for appointment cards -->
        <LinearLayout
            android:id="@+id/appointmentCardsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- AppointmentR7 cards will be dynamically added here -->

        </LinearLayout>

    </LinearLayout>
</ScrollView>
